reimplement Args using ImmutableArrayList, add tests